--- a/frontend/src/components/LeftSideBar/style/LeftSideBar.css
+++ b/frontend/src/components/LeftSideBar/style/LeftSideBar.css
@@ -25,6 +25,7 @@
     border-radius: 6px;
     border: 1px solid #d1d5db;
     font-size: .95rem;
+    max-width: 95%;
 }
 
 
@@ -38,6 +39,7 @@
     cursor: pointer;
     display:none;
     transition: all 0.3s ease-in-out;
+    max-width: 95%;
 }
 
 #delete-button{
@@ -49,6 +51,7 @@
     cursor: pointer;
     display:none;
     transition: all 0.3s ease-in-out;
+    max-width: 95%;
 }
 
 
@@ -90,3 +93,22 @@
     background-color: #b91c1c;
 }
 
+#polygon-form-left-sidebar input[type="file"]::file-selector-button {
+   padding: 8px 12px;
+    border-radius: 6px;
+    border: 1px solid #2563eb;
+    background: #2563eb;
+    color: white;
+    cursor: pointer;
+}
+
+
+#img-view-screen-button{
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: 1px solid #2563eb;
+    background: #2563eb;
+    color: white;
+    cursor: pointer;
+    max-width: 95%;
+}
